@@ -13,7 +13,7 @@ jobs:
       postgres:
         image: postgres:15-alpine
         ports:
-          - 5432:5432
+          - 55432:5432
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -55,7 +55,7 @@ jobs:
       - name: Test
         env:
           POSTGRES_HOST: localhost
-          POSTGRES_PORT: 5432
+          POSTGRES_PORT: 55432
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: integration_server
