@@ -44,6 +44,7 @@ async def test_rls_isolation() -> None:  # noqa: D401
         alembic_cfg.set_main_option("sqlalchemy.url", sync_url)
         command.upgrade(alembic_cfg, "head")
 
+        # Main engine as superuser (for setup)
         engine = create_async_engine(async_url, future=True)
         async_session = async_sessionmaker(engine, expire_on_commit=False)
 
@@ -57,20 +58,32 @@ async def test_rls_isolation() -> None:  # noqa: D401
             # Clear any previously set org on this connection
             await session.execute(text("SELECT set_config('app.current_org', NULL, false)"))
 
+        # create a non-superuser role for RLS verification
+        async with async_session() as session:
+            await session.execute(text("CREATE ROLE appuser LOGIN PASSWORD 'app'"))
+            await session.execute(text("GRANT SELECT ON TABLE \"user\" TO appuser"))
+            await session.commit()
+
         # fetch org ids
         async with async_session() as session:
             orgs = (await session.execute(select(models.Organization))).scalars().all()
             org1, org2 = orgs[0].id, orgs[1].id
 
-        # Verify RLS: session with org1 sees only its user
-        async with async_session() as session_org1:
+        # Build a verification engine using the non-superuser
+        import re as _re
+        verify_url = _re.sub(r"//[^:]+:[^@]+@", "//appuser:app@", async_url)
+        verify_engine = create_async_engine(verify_url, future=True)
+        verify_session = async_sessionmaker(verify_engine, expire_on_commit=False)
+
+        # Verify RLS: session with org1 sees only its user (as non-superuser)
+        async with verify_session() as session_org1:
             # Use global (non-local) to survive across implicit transactions in CI
             await session_org1.execute(text("SELECT set_config('app.current_org', :org, false)"), {"org": str(org1)})
             users_org1 = (await session_org1.execute(select(models.User))).scalars().all()
             assert len(users_org1) == 1
             assert users_org1[0].email == "a@example.com"
 
-        async with async_session() as session_org2:
+        async with verify_session() as session_org2:
             await session_org2.execute(text("SELECT set_config('app.current_org', :org, false)"), {"org": str(org2)})
             users_org2 = (await session_org2.execute(select(models.User))).scalars().all()
             assert len(users_org2) == 1
